--- a/README
+++ b/README
@@ -1,8 +1,1 @@
-# test title
-
-this is a very good example
-
-```javascript
-var s = "JavaScript syntax highlighting";
-alert(s);
-```
+无法解析markdown语句，具体说明移动到Wiki(http://109.6.13.48/nfc-chent/s3toolbox/wikis/home)目录
