添加文档和描述

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
+S3ToolBox
+version = 1.0
+homepage = http://109.6.13.48/nfc-chent/s3toolbox/tree/master
+developed by gyj front-end team..
+
 无法解析markdown语句，具体说明移动到Wiki(http://109.6.13.48/nfc-chent/s3toolbox/wikis/home)目录
+即上面导航点击wiki
